gcc/testsuite/rust/rustc/ui/issues/issue-3099-a.rs
enum A { B, C }

enum A { D, E } // { dg-error ".E0428." "" { target *-*-* } }

fn main() {}

